* Fix missing notifications in custom_entity:set_origin() (#880).
* Fix creating an entity with the same name as another one just removed (#795).
* Fix parallax scrolling for dynamic tiles (#816).
* Fix crash when a diagonal tile is not square (#837).
* Fix crash when the teletransporter after stairs is missing.
* Fix text_surface:set_rendering_mode() not working (#833).
* Fix support of joypads with multiple axes.
* Fix sol.input.get_mouse_coordinates() ignoring the zoom factor (#734).

Lua API changes
---------------

Changes that introduce incompatibilities:

* chest:on_empty() is replaced by chest:on_opened(treasure) (#483).
* Enemy ranks no longer exists, set_hurt_style() needs to be called (#449).
* Items with amount now have a default max amount of 1000 (#688).
* Fix hero state name "freezed", renamed it to "frozen" (#813).
* Fix map:get_entities() not returning the hero (#670).
* map:get_camera_position() is now deprecated, use camera:get_position().
* map:move_camera() is now deprecated, use a camera movement instead.
* Fix entity:set_enabled(true) delayed while it blocks the hero (#817).
* Fix brandished treasure sprite and shop treasure sprite not animated (#790).

Changes that do not introduce incompatibilities:

* Add a function sol.main.get_solarus_version() (#767).
* Add a function sol.main.get_quest_format().
* Add a function sol.main.get_type() (#744).
* Add a method game:set_suspended() (#845).
* Add methods map:get_min_layer() and map:get_max_layer() (#445).
* Add a method map:get_entities_by_type() (#796).
* Add a method map:get_entities_in_rectangle() (#142).
* Add a method map:get_camera() (the camera is now a map entity).
* map:get_camera_position() is now deprecated, use camera:get_position().
* map:move_camera() is now deprecated, use a camera movement instead.
* Add methods map:set_world() and map:set_floor() (#656).
* map:get_entities() can now be called without parameter to get all entities.